--- a/src/styles/navbar.module.scss
+++ b/src/styles/navbar.module.scss
@@ -1,14 +1,23 @@
 @import "./variables";
 @import "./mixins";
 
+.navContainer {
+  padding: 4rem 0;
+  // border: 1px solid blue;
+  display: flex;
+  justify-content: center;
+
+  @include breakpoint("max-width", $tablet) {
+    justify-content: flex-end;
+    padding: 2rem 5%;
+  }
+}
+
 .navbar {
-  margin-top: 5rem;
   border: 1px solid $border-color;
   border-radius: 50px;
   display: inline-block;
   padding: 1.5rem 3rem;
-  margin-left: 50%;
-  transform: translate(-50%);
 
   @include breakpoint("max-width", $tablet) {
     display: none;
@@ -60,15 +69,9 @@
   .dropdownButton {
     cursor: pointer;
     display: inline-block;
-    padding: 8px 16px;
+    padding: 1.5rem 3rem;
     border: 1px solid $border-color;
     border-radius: 50px;
-    position: absolute;
-    right: 10%;
-
-    @include breakpoint("min-width", $mobile) {
-      margin-top: -10%;
-    }
 
     span svg {
       margin-left: 0.5rem;
@@ -80,6 +83,7 @@
     z-index: 99;
     left: 0;
     right: 0;
+    top: 2rem;
     margin: 0 auto;
     position: absolute;
     width: 90%;
